--- a/package.json
+++ b/package.json
@@ -1,32 +1,13 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.3.0",
-  "description": "A sample Node.js app using Express 4",
-  "engines": {
-    "node": "10.x"
-  },
+  "name": "rando",
+  "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "test": "node test.js"
-  },
+  "license": "MIT",
   "dependencies": {
-    "ejs": "^2.5.6",
-    "express": "^4.17.1",
-    "password-generator": "^2.2.0"
+    "express": "^4.15.3",
+    "password-generator": "^2.1.0"
   },
-  "devDependencies": {
-    "request": "^2.81.0",
-    "tape": "^4.7.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
-  },
-  "keywords": [
-    "node",
-    "heroku",
-    "express"
-  ],
-  "license": "MIT"
+  "scripts": {
+    "start": "node index.js"
+  }
 }
