--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "saylestyler <saylestyler@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "password-generator": "^2.2.0"
   },
