--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "repository": "https://github.com/saylestyler/ppp",
   "author": "saylestyler <saylestyler@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "password-generator": "^2.2.0"
-  },
-  "scripts": {
-    "start": "node index.js",
-    "heroku-postbuild": "cd client && yarn && yarn run build"
   }
 }
