--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "ppp",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/saylestyler/ppp",
-  "author": "saylestyler <saylestyler@gmail.com>",
-  "license": "MIT",
-  "scripts": {
-    "start": "node index.js",
-    "heroku-postbuild": "cd client && yarn && yarn run build"
-  },
-  "dependencies": {
-    "express": "^4.17.1",
-    "password-generator": "^2.2.0"
-  }
+	"name": "ppp",
+	"version": "1.0.0",
+	"main": "index.js",
+	"repository": "https://github.com/saylestyler/ppp",
+	"author": "saylestyler <saylestyler@gmail.com>",
+	"license": "MIT",
+	"scripts": {
+		"start": "concurrently \"node index.js\" \"cd client && yarn start\"",
+		"heroku-postbuild": "cd client && yarn && yarn run build"
+	},
+	"dependencies": {
+		"concurrently": "^4.1.0",
+		"express": "^4.17.1",
+		"password-generator": "^2.2.0"
+	}
 }
